crates/toml_edit/tests/snapshots/invalid/inline-table/duplicate-key-04.stderr
TOML parse error at line 1, column 24
  |
1 | tbl = { a.b = "a_b", a.b.c = "a_b_c" }
  |                        ^
cannot extend value of type string with a dotted key
